--- a/public/styles.css
+++ b/public/styles.css
@@ -3,12 +3,53 @@
     font-family: "Courier New", Courier, monospace;
 }
 
+body {
+    position: relative;
+}
+
 h1 {
     margin-left: 20px;
 }
 
 h2 {
     margin-left: 20px;
+}
+
+form {
+    margin-left: 20px;
+}
+
+.form-row {
+    margin-bottom: 10px;
+}
+
+form button {
+    font-size: medium;
+    margin-left: 10px;
+}
+
+input {
+    font-size: medium;
+}
+
+.input-file {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.input-file + label {
+    border: 1px solid lightgray;
+    border-radius: 4px;
+    padding: 0 10px 0 10px;
+}
+
+.input-file:focus + label,
+.input-file + label:hover {
+    background-color: lightgray;
 }
 
 .container {
@@ -37,13 +78,21 @@ h2 {
 footer {
     position: absolute;
     bottom: 0;
+    margin-left: 20px;
 }
 
 @media screen and (max-width: 720px) {
-    body {
-        position: relative;
+    .form-row {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 60%;
     }
-
+    .input-file +label {
+        margin-bottom: 15px;
+    }
+    form button {
+        margin-left: 0;
+    }
     .container {
         grid-template-columns: 1fr;
     }
