--- a/public/styles.css
+++ b/public/styles.css
@@ -1,22 +1,27 @@
 * {
     box-sizing: border-box;
     font-family: "Courier New", Courier, monospace;
+    margin: 0;
 }
 
 body {
     position: relative;
+    padding: 20px 30px 10px 30px;
 }
 
 h1 {
     margin-left: 20px;
+    margin-bottom: 40px;
 }
 
 h2 {
     margin-left: 20px;
+    margin-bottom: 10px;
 }
 
 form {
     margin-left: 20px;
+    margin-bottom: 40px;
 }
 
 .form-row {
@@ -63,7 +68,7 @@ input {
     align-items: center;
     height: 350px;
     padding: 5px;
-    margin: 0 20px 30px 20px;
+    margin: 0 20px 50px 20px;
     border: 1px gray solid;
     border-radius: 5px;
 }
@@ -72,6 +77,35 @@ input {
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
+}
+
+.modal {
+    position: absolute;
+    display: grid;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 1;
+}
+
+.modal-card {
+    position: fixed;
+    display: grid;
+    justify-self: center;
+    background-color: whitesmoke;
+    border: 1px gray solid;
+    border-radius: 5px;
+    padding: 10px;
+    z-index: 2;
+    top: 20%;
+}
+
+.modal-card img {
+    max-width: 400px;
+    height: auto;
     border-radius: 5px;
 }
 
@@ -87,7 +121,7 @@ footer {
         grid-template-columns: 1fr;
         width: 60%;
     }
-    .input-file +label {
+    .input-file + label {
         margin-bottom: 15px;
     }
     form button {
