--- a/public/styles.css
+++ b/public/styles.css
@@ -122,27 +122,44 @@ input {
 }
 
 .modal-card {
-    width: 520px;
+    width: 45%;
     position: fixed;
+    overflow: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+    max-height: 80%;
     display: grid;
     justify-self: center;
     background-color: whitesmoke;
     border-radius: 5px;
     padding: 10px;
     z-index: 2;
-    top: 15%;
+    top: 10%;
+}
+
+.modal-card::-webkit-scrollbar {
+  display: none;
 }
 
 .modal-card img {
-    width: 500px;
+    width: 100%;
     border-radius: 5px;
     margin-bottom: 20px;
+    object-fit: cover;
 }
 
 .user-info {
     margin-top: 10px;
     margin-bottom: 10px;
     font-size: small;
+}
+
+.comment-card {
+    background-color: white;
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 10px;
 }
 
 .modal-button {
@@ -193,6 +210,9 @@ footer {
     }
     .gallery-container {
         grid-template-columns: 1fr;
+    }
+    .modal-card {
+        width: 90%;
     }
 }
 
