--- a/public/styles.css
+++ b/public/styles.css
@@ -20,7 +20,11 @@ h2 {
     margin-bottom: 10px;
 }
 
-form {
+h3 {
+    margin-bottom: 10px;
+}
+
+.image-form {
     margin-left: 20px;
     margin-bottom: 40px;
 }
@@ -98,7 +102,7 @@ input {
     border-radius: 5px;
 }
 
-.button-container {
+.more-container {
     display: grid;
     grid-template-columns: 1fr;
     padding-bottom: 50px;
@@ -138,7 +142,7 @@ input {
 }
 
 .modal-card::-webkit-scrollbar {
-  display: none;
+    display: none;
 }
 
 .modal-card img {
@@ -150,8 +154,28 @@ input {
 
 .user-info {
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
     font-size: small;
+}
+
+.button-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-bottom: 30px;
+}
+
+.comment-container {
+    display: grid;
+    text-align: left;
+}
+
+.comment-container input {
+    margin-bottom: 10px;
+}
+
+.comment-button {
+    margin-left: 0;
+    margin-bottom: 30px;
 }
 
 .comment-card {
