--- a/public/styles.css
+++ b/public/styles.css
@@ -158,24 +158,33 @@ input {
     font-size: small;
 }
 
+.comment-card .user-info {
+    margin-bottom: 0;
+}
+
 .button-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     margin-bottom: 30px;
 }
 
-.comment-container {
+.input-container {
     display: grid;
     text-align: left;
 }
 
-.comment-container input {
+.input-container input {
     margin-bottom: 10px;
 }
 
-.comment-button {
+.input-button {
     margin-left: 0;
     margin-bottom: 30px;
+}
+
+.comment-container {
+    text-align: left;
+    margin-bottom: 40px;
 }
 
 .comment-card {
@@ -213,9 +222,29 @@ footer {
     body {
         padding-right: 10px;
         padding-left: 10px;
+        text-align: center;
     }
+    h1 {
+        margin-left: 0;
+    }
+
+    h2 {
+        margin-left: 0;
+    }
+
+    h3 {
+        margin-bottom: 0;
+    }
+
+    .image-form {
+        margin-left: 0;
+        display: grid;
+        justify-items: center;
+    }
+
     .form-row {
         display: grid;
+        justify-items: center;
         grid-template-columns: 1fr;
         width: 60%;
         margin-bottom: 0;
@@ -237,6 +266,7 @@ footer {
     }
     .modal-card {
         width: 90%;
+        text-align: left;
     }
 }
 
