--- a/public/styles.css
+++ b/public/styles.css
@@ -63,11 +63,16 @@ input {
     text-align: center;
     overflow: hidden;
     width: 150px;
+    font-weight: bold;
 }
 
 .input-file:focus + label {
     border: 2px solid #32a1ce;
     padding: 0 9px 0 9px;
+}
+
+.upload-button {
+    font-weight: bold;
 }
 
 .gallery-container {
@@ -83,9 +88,8 @@ input {
 
 .card {
     display: grid;
-    grid-template-rows: 9fr 1fr;
-    align-items: center;
-    height: 350px;
+    grid-template-rows: 7fr 1fr;
+    height: 370px;
     padding: 5px;
     border: 1px gray solid;
     border-radius: 5px;
@@ -102,6 +106,10 @@ input {
     border-radius: 5px;
 }
 
+.img-title {
+    padding-top: 10px;
+}
+
 .more-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -112,6 +120,11 @@ input {
     justify-self: center;
     cursor: pointer;
     font-size: medium;
+    font-weight: bold;
+    padding: 2px 10px 2px 10px;
+    border-radius: 5px;
+    background-color: white;
+    border-style: solid;
 }
 
 .modal {
@@ -154,7 +167,7 @@ input {
 
 .user-info {
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 25px;
     font-size: small;
 }
 
@@ -165,7 +178,8 @@ input {
 .button-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    margin-bottom: 30px;
+    margin: 0 20px 30px 20px;
+    justify-items: center;
 }
 
 .input-container {
@@ -180,6 +194,7 @@ input {
 .input-button {
     margin-left: 0;
     margin-bottom: 30px;
+    width: auto;
 }
 
 .comment-container {
@@ -188,6 +203,7 @@ input {
 }
 
 .comment-card {
+    display: grid;
     background-color: white;
     border: 1px solid lightgray;
     border-radius: 5px;
@@ -195,13 +211,26 @@ input {
     margin-bottom: 10px;
 }
 
+.delete-button {
+    font-size: small;
+    justify-self: end;
+    margin-top: -5px;
+    margin-right: -5px;
+    width: auto;
+}
+
 .modal-button {
     cursor: pointer;
-    border: 1px solid;
+    border: 1px solid gray;
     border-radius: 5px;
     width: 80px;
     text-align: center;
     padding: 0 1px 0 1px;
+}
+
+.hidden-button {
+    visibility: hidden;
+    cursor: default;
 }
 
 .popup {
@@ -209,7 +238,20 @@ input {
 }
 
 .popup-card {
+    text-align: center;
     top: 30%;
+    max-width: 520px;
+}
+
+.popup-card h3 {
+    margin-top: 10px;
+    margin-bottom: 30px;
+}
+
+.popup-card .button-container {
+    grid-template-columns: 1fr 1fr;
+    padding-left: 25%;
+    padding-right: 25%;
 }
 
 footer {
@@ -267,6 +309,19 @@ footer {
     .modal-card {
         width: 90%;
         text-align: left;
+    }
+    .button-container {
+        margin: 0 0 30px 0;
+    }
+    .modal-button {
+        width: 70px;
+    }
+    .popup-card {
+        text-align: center;
+    }
+    .popup-card .button-container {
+        padding-left: 10%;
+        padding-right: 10%;
     }
 }
 
